fix deleteItemFromBasket
